ubuntu-dev-tools (0.113) UNRELEASED; urgency=low

  * debian-distro-info, distro-info, ubuntu-distro-info: New tools.

 -- Benjamin Drung <bdrung@debian.org>  Fri, 21 Jan 2011 18:22:23 +0100

ubuntu-dev-tools (0.112) unstable; urgency=low

  [ Robert Collins ]
  * manage-credentials: Finish migrating away from the Launchpad 'edge' service
    root. (LP: #704657)

  [ Stefano Rivera ]
  * New source package downloading framework in ubuntutools.archive. Use in
    many scripts.
  * pull-lp-source: str() exceptions before passing to Logger (LP: #695523)

 -- Benjamin Drung <bdrung@debian.org>  Thu, 20 Jan 2011 10:25:57 +0100

ubuntu-dev-tools (0.111) natty; urgency=low

  * ubuntutools/test/test_help.py: Blacklist --help test for check-mir, it
    does not have help. Fixes FTBFS on the buildd.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 13 Jan 2011 20:15:41 -0600

ubuntu-dev-tools (0.110) natty; urgency=low

  * doc/check-mir.1: Fix typo.
  * check-mir: Check binary dependencies, too.
  * debian/control: Add check-mir to package description.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 13 Jan 2011 19:28:20 -0600

ubuntu-dev-tools (0.109) natty; urgency=low

  [ Stefano Rivera ]
  * Convert debian/copyright to DEP5, make sure all scripts are listed
    (LP: #692003)
  * Drop preinst (pbuilder-dist bash_completion handling), it is not required
    for any current upgrade path on Debian or Ubuntu.
  * Switch to dh_python2:
    - Use X-Python-Version instead of XS-Python-Version.
    - Use ${python:Breaks} to specify Python version compatibility.
  * Support reading configuration variables from devscripts configuration
    files. (LP: #681693)
    - Added ubuntu-dev-tools.5
    - Support this in many u-d-t scripts, and update manpages.
    - Deprecate old configuration environment variables.
  * Support the combined "Name <email>" format in UBUMAIL, DEBFULLNAME, and
    DEBEMAIL. (LP: #665202)
  * Add the beginnings of a test suite. (LP: #690386)