@@ -33,10 +33,8 @@ import os
 import subprocess
 import sys
 
+from ubuntutools.distro_info import DebianDistroInfo
 import ubuntutools.misc
-
-DEBIAN_DISTROS = ['etch', 'lenny', 'squeeze', 'sid', 'stable', 'testing',
-                  'unstable', 'experimental']
 
 class PbuilderDist:
     def __init__(self, builder):
@@ -75,6 +73,10 @@ class PbuilderDist:
 
         # Builder
         self.builder = builder
+
+        self._debian_distros = DebianDistroInfo().all + \
+                               ['stable', 'testing', 'unstable', 'experimental']
+
 
         # Ensure that the used builder is installed
         paths = set(os.environ['PATH'].split(':'))
@@ -133,7 +135,7 @@ class PbuilderDist:
             if os.path.isdir('/usr/share/debootstrap/scripts/'):
                 # Debian experimental doesn't have a debootstrap file but
                 # should work nevertheless.
-                if distro not in DEBIAN_DISTROS:
+                if distro not in self._debian_distros:
                     answer = ask(('Warning: Unknown distribution "%s". Do you '
                                   'want to continue [y/N]? ') % distro)
                     if answer not in ('y', 'Y'):
@@ -235,7 +237,7 @@ class PbuilderDist:
                     'deb file:///var/cache/archive/ %s/' % self.target_distro,
             ]
 
-        if self.target_distro in DEBIAN_DISTROS:
+        if self.target_distro in self._debian_distros:
             arguments += ['--mirror', 'http://ftp.debian.org/debian']
             components = 'main'
             if self.extra_components:
@@ -255,7 +257,7 @@ class PbuilderDist:
 
         # Work around LP:#599695
         if (ubuntutools.misc.system_distribution() == 'Debian'
-                and self.target_distro not in DEBIAN_DISTROS):
+                and self.target_distro not in self._debian_distros):
             if not os.path.exists(
                     '/usr/share/keyrings/ubuntu-archive-keyring.gpg'):
                 print >> sys.stderr, 'Error: ubuntu-keyring not installed'
@@ -265,7 +267,7 @@ class PbuilderDist:
                     '--keyring=/usr/share/keyrings/ubuntu-archive-keyring.gpg',
             ]
         elif (ubuntutools.misc.system_distribution() == 'Ubuntu'
-                and self.target_distro in DEBIAN_DISTROS):
+                and self.target_distro in self._debian_distros):
             if not os.path.exists(
                     '/usr/share/keyrings/debian-archive-keyring.gpg'):
                 print >> sys.stderr, ('Error: debian-archive-keyring not '
