@@ -1,8 +1,9 @@
 ubuntu-dev-tools (0.113) UNRELEASED; urgency=low
 
   * debian-distro-info, distro-info, ubuntu-distro-info: New tools.
+  * Use new ubuntutools.distro_info in various scripts.
 
- -- Benjamin Drung <bdrung@debian.org>  Fri, 21 Jan 2011 18:22:23 +0100
+ -- Benjamin Drung <bdrung@debian.org>  Fri, 21 Jan 2011 19:19:01 +0100
 
 ubuntu-dev-tools (0.112) unstable; urgency=low
 
